--- a/front/src/css/style.css
+++ b/front/src/css/style.css
@@ -86,3 +86,23 @@ footer{
     width: 100%;
     margin-bottom: 2rem;
 }
+
+.toast{
+    position: absolute;
+    top: 100px;
+    right: 10px;
+    border-radius: 10px;
+}
+
+.toast header{
+    background-color: #c6c6c6;
+    border-radius: 10px 10px 0 0;
+    padding: 5px;
+}
+
+.toast header button{
+    float: right;
+    margin-bottom: 15px;
+    background: none;
+    border: none;
+}
